--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-Flask==2.3.2
-gunicorn==21.2.0
+Flask
+pandas
+google-api-python-client
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+oauth2client
+gunicorn
