--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ Flask
 pandas
 google-api-python-client
 google-auth
-google-auth-oauthlib
 google-auth-httplib2
-oauth2client
-gunicorn
+google-auth-oauthlib
+openpyxl
