--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask
 pandas
 google-api-python-client
 google-auth
-google-auth-httplib2
 google-auth-oauthlib
+google-auth-httplib2
 openpyxl
+requests
